# QC-COPE-IS-prognosis

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: original_cleaned.ipynb  pipeline_quickstart.ipynb
scripts/: run_delong.py  train_compare_models.py
src/stroke_prognosis/: delong.py  evaluation.py  io.py  models.py  utils.py
